<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.settings.SettingsActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <Switch
                android:id="@+id/settings_notification_enable_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_enable_notifications"
                android:padding="@dimen/padding_16"
                android:textColor="?attr/colorControlNormal"
                android:textStyle="bold"/>

        <Switch
                android:id="@+id/settings_persistent_notification_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_enable_persistent_notification"
                android:padding="@dimen/padding_16"
                android:textColor="?attr/colorControlNormal"
                android:textStyle="bold"/>

        <Switch
                android:id="@+id/profile_theme_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_night_mode"
                android:padding="@dimen/padding_16"
                android:textColor="?attr/colorControlNormal"
                android:textStyle="bold"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_grey"/>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

            <ImageView
                    android:id="@+id/settings_app_icon_iv"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:src="@mipmap/ic_launcher"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/settings_app_icon_iv">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="?android:attr/textColorPrimary"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_version"/>

            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
                android:id="@+id/settings_rate_us_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground">

            <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="16dp"
                    android:theme="@style/AppTheme.DayNight"
                    app:srcCompat="@drawable/ic_favorite_black_24dp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_gravity="center_vertical"
                    android:text="Rate Us"/>

        </LinearLayout>

        <TextView
                android:id="@+id/settings_send_feedback_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/send_feedback"
                android:textColor="?android:attr/textColorPrimary"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"/>

        <TextView
                android:id="@+id/settings_privacy_policy_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/privacy_policy"
                android:textColor="?android:attr/textColorPrimary"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textAlignment="center"
                android:text="@string/made_in_india"
                android:textColor="?android:attr/textColorPrimary"/>
    </LinearLayout>


</ScrollView>