<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/row_daily_usage_date_tv"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/row_daily_usage_mobile_label"
                    android:text="@string/mobile_label"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/margin_16"
                    app:layout_constraintTop_toBottomOf="@+id/row_daily_usage_date_tv" android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/row_daily_usage_mobile_tv"
                    app:layout_constraintStart_toEndOf="@+id/row_daily_usage_mobile_label"
                    android:layout_marginTop="@dimen/margin_8"
                    app:layout_constraintTop_toBottomOf="@+id/row_daily_usage_date_tv"
                    android:layout_marginStart="@dimen/margin_4"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi_label"
                    android:id="@+id/row_daily_usage_wifi_label"
                    android:layout_marginTop="@dimen/margin_8"
                    app:layout_constraintTop_toBottomOf="@+id/row_daily_usage_date_tv"
                    app:layout_constraintStart_toStartOf="@+id/row_daily_usage_mobile_tv"
                    android:layout_marginStart="70dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/row_daily_usage_wifi_tv"
                    app:layout_constraintStart_toEndOf="@+id/row_daily_usage_wifi_label" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/row_daily_usage_date_tv"
                    android:layout_marginStart="@dimen/margin_4"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_label"
                    android:id="@+id/row_daily_usage_total_label"
                    app:layout_constraintStart_toStartOf="@+id/row_daily_usage_wifi_tv"
                    android:layout_marginStart="70dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/row_daily_usage_date_tv"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2099 MB"
                    android:id="@+id/row_daily_usage_total_tv"
                    android:layout_marginTop="@dimen/margin_8"
                    app:layout_constraintTop_toBottomOf="@+id/row_daily_usage_date_tv"
                    app:layout_constraintStart_toEndOf="@+id/row_daily_usage_total_label"
                    android:layout_marginStart="@dimen/margin_4"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>